@@ -25,8 +25,8 @@ jobs:
           boost-dl: https://boostorg.jfrog.io/artifactory/main/release/1.71.0/source/boost_1_71_0.tar.bz2
         - os: macos-10.15
           boost: latest
-          boost-ver: 1_76_0
-          boost-dl: https://boostorg.jfrog.io/artifactory/main/release/1.76.0/source/boost_1_76_0.tar.bz2
+          boost-ver: 1_78_0
+          boost-dl: https://boostorg.jfrog.io/artifactory/main/release/1.76.0/source/boost_1_78_0.tar.bz2
         - os: ubuntu-20.04
           boost: oldest
           boost-ver: 1_63_0
