@@ -1,11 +1,11 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 AC_PREREQ([2.69])
-AC_INIT([scribbu], [0.6.20], [sp1ff@pobox.com], [scribbu], [https://github.com/sp1ff/scribbu])
+AC_INIT([scribbu], [0.6.21], [sp1ff@pobox.com], [scribbu], [https://github.com/sp1ff/scribbu])
 AC_CONFIG_MACRO_DIR([macros])
 AC_CONFIG_SRCDIR([src/scribbu.cc])
 AC_CONFIG_AUX_DIR([build-aux])
-AM_INIT_AUTOMAKE([-Wall -Werror dist-bzip2 dist-xz])
+AM_INIT_AUTOMAKE([-Wall -Werror dist-bzip2 dist-xz dist-zstd])
 AC_CANONICAL_HOST
 AH_TEMPLATE([MACOS],[Defined when running on a MacOS.])
 case "${host_os}" in
@@ -29,7 +29,7 @@ AC_PROG_YACC
 AC_PROG_LEX
 
 # Checks for libraries.
-AX_BOOST_BASE([1.58], [], [AC_MSG_ERROR([Scribbu requires boost_base 1.58 or later.])])
+AX_BOOST_BASE([1.63], [], [AC_MSG_ERROR([Scribbu requires boost_base 1.63 or later.])])
 AX_BOOST_IOSTREAMS
 AX_BOOST_FILESYSTEM
 AX_BOOST_LOG
